Improvements on preferences window

--- a/manual/chronojump_manual_en.lyx
+++ b/manual/chronojump_manual_en.lyx
@@ -4176,7 +4176,7 @@ In the intervallic runs, since they are composed of a set of runs, this
 \end_layout
 
 \begin_layout Subsection
-Reparación de carreras con tramos
+Repair intervallic runs
 \end_layout
 
 \begin_layout Standard
