Fixed catalan typo

--- a/po/ca.po
+++ b/po/ca.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: chronojump\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-04-20 13:12+0200\n"
-"PO-Revision-Date: 2011-04-20 14:08+0100\n"
+"PO-Revision-Date: 2011-04-20 17:30+0100\n"
 "Last-Translator: Xavier de Blas <xaiblas@gmail.com>\n"
 "Language-Team: \n"
 "Language: \n"
@@ -4039,8 +4039,8 @@ msgstr "Repareu el test seleccionat"
 msgid "translator-credits"
 msgstr ""
 "Jordi Mas i Hernàndez <jmas@softcatala.org>, 2008, 2011 (fixes typos)\n"
-"Xavier de Blas <xaviblas@gmail.com>, 2007-2011"
-"Elisabet Bermejo <elibermejo@gmail.com>, 2007.\n"
+"Xavier de Blas <xaviblas@gmail.com>, 2007-2011\n"
+"Elisabet Bermejo <elibermejo@gmail.com>, 2007."
 
 #: ../src/gui/chronojump.cs:5305
 msgid "Done for testing purposes. Chronojump will exit badly"
