Final changes going to 0.9.3

--- a/manual/chronojump_manual_en.lyx
+++ b/manual/chronojump_manual_en.lyx
@@ -53,9 +53,9 @@
 \begin_layout Title
 
 \size huge
-Manual de Chronojump
+Chronojump
 \size default
-
+ Manual
 \begin_inset Newline newline
 \end_inset
 
