--- a/po/es.po
+++ b/po/es.po
@@ -11,15 +11,16 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: chronojump.master\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-04-20 20:36+0200\n"
-"PO-Revision-Date: 2011-04-20 06:48+0100\n"
-"Last-Translator: Xavier de Blas <xaiblas@gmail.com>\n"
+"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
+"product=chronojump&keywords=I18N+L10N&component=general\n"
+"POT-Creation-Date: 2011-04-20 18:58+0000\n"
+"PO-Revision-Date: 2011-04-21 19:26+0200\n"
+"Last-Translator: Daniel Mustieles <daniel.mustieles@gmail.com>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: \n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. the strings created by Catalog cannot be const
@@ -64,9 +65,8 @@ msgid "Statistics support."
 msgstr "Soporte estadístico."
 
 #: ../src/constants.cs:45
-#, fuzzy
 msgid "Chronojump Manual English translation"
-msgstr "Selección de idioma de Chronojump"
+msgstr "Traducción al inglés del manual de Chronojump"
 
 #: ../src/constants.cs:109
 msgid "Any"
@@ -1133,12 +1133,11 @@ msgid "Connecting with Chronopic"
 msgstr "Iniciando la conexion con Chronopic"
 
 #: ../glade/chronojump.glade.h:173
-#, fuzzy
 msgid ""
 "Contact platform\n"
 "(circuit board)"
 msgstr ""
-"Platforma de contactos\n"
+"Plataforma de contactos\n"
 "(placa de circuito impreso)"
 
 #: ../glade/chronojump.glade.h:175
