[l10n] Updated German translation

--- a/po/de.po
+++ b/po/de.po
@@ -23,8 +23,8 @@ msgstr ""
 "Project-Id-Version: chronojump master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=chronojump&keywords=I18N+L10N&component=general\n"
-"POT-Creation-Date: 2011-04-20 16:25+0000\n"
-"PO-Revision-Date: 2011-04-20 20:15+0100\n"
+"POT-Creation-Date: 2011-04-20 18:58+0000\n"
+"PO-Revision-Date: 2011-04-23 17:22+0100\n"
 "Last-Translator: Mario Blättermann <mariobl@freenet.de>\n"
 "Language-Team: Deutsch <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -1145,10 +1145,10 @@ msgstr "Verbindung zu Chronopic wird aufgebaut"
 #: ../glade/chronojump.glade.h:173
 msgid ""
 "Contact platform\n"
-"(modular circuit board)"
+"(circuit board)"
 msgstr ""
 "Kontaktebene\n"
-"(modulare Schaltkreisplattform)"
+"(Schaltkreisplattform)"
 
 #: ../glade/chronojump.glade.h:175
 msgid ""
@@ -1793,7 +1793,6 @@ msgid "Number of tracks"
 msgstr "Anzahl der Laufstrecken"
 
 #: ../glade/chronojump.glade.h:322
-#, fuzzy
 msgid ""
 "On jumps results tab, power is calculated depending on jump type:\n"
 "\n"
@@ -1806,14 +1805,14 @@ msgid ""
 "\n"
 "If you want to use other formulas, go to Statistics."
 msgstr ""
-"Im Hauptfenster wird die Leistung je nach Sprungtyp berechnet:\n"
+"Im Reiter der Sprungergebnisse wird die Leistung je nach Sprungtyp "
+"berechnet:\n"
 "-Sprünge mit BD und SD: Bosco Relative Power (W/kg)\n"
 " \tP = 24.6 * (Gesamtzeit + Sprungzeit) / Kontaktzeit\n"
 "-Sprünge ohne BD: Lewis Peak Power 1974 (W)\n"
 "\tP = Quadratwurzel(4.9) * 9.8 * (Körpergewicht + zusätzliches Gewicht) *\n"
 "\tQuadratwurzel (Sprunghöhe in Meter)\n"
-"Wenn Sie andere Formeln verwenden möchten, öffnen Sie bitte die Werkzeuge / "
-"Statistiken."
+"Wenn Sie andere Formeln verwenden möchten, öffnen Sie bitte die Statistiken."
 
 #: ../glade/chronojump.glade.h:331
 msgid ""
