--- a/po/sl.po
+++ b/po/sl.po
@@ -10,14 +10,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: chronojump master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=chronojump&keywords=I18N+L10N&component=general\n"
-"POT-Creation-Date: 2011-08-29 21:38+0000\n"
-"PO-Revision-Date: 2011-09-07 21:33+0100\n"
+"POT-Creation-Date: 2011-09-07 19:35+0000\n"
+"PO-Revision-Date: 2011-09-15 22:21+0100\n"
 "Last-Translator: Matej Urbančič <mateju@svn.gnome.org>\n"
 "Language-Team: Slovenian GNOME Translation Team <gnome-si@googlegroups.com>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: \n"
 "Plural-Forms: nplurals=4; plural=(n%100==1 ? 1 : n%100==2 ? 2 : n%100==3 || n%100==4 ? 3 : 0);\n"
 "X-Poedit-Country: SLOVENIA\n"
 "X-Poedit-Language: Slovenian\n"
@@ -2679,23 +2679,18 @@ msgid "Could not open location; you might not have permission to open the file."
 msgstr "Ni mogoče odpreti  mesta; morda ni ustreznih dovoljenj."
 
 #: ../libcesarplayer/src/bacon-video-widget-gst-0.10.c:2591
-#, fuzzy
 msgid "The video output is in use by another application. Please close other video applications, or select another video output in the Multimedia Systems Selector."
-msgstr "Odvod slike uporablja drug program. Ustavite program, ki zaseda odvod, ali pa izberite nov odvod med nastavitvami sistema."
+msgstr "Slikovni izhod uporablja drug program. Ustaviti je treba druge programe, ki zasedajo izhod, ali pa izberite nov slikovni izhod z izbirnikom predstavnih sistemov."
 
 #: ../libcesarplayer/src/bacon-video-widget-gst-0.10.c:2598
-#, fuzzy
 msgid "The audio output is in use by another application. Please select another audio output in the Multimedia Systems Selector. You may want to consider using a sound server."
-msgstr "Odvod zvoka uporablja drug program. Ustavite program, ki zaseda izhod, ali pa izberite nov odvod med nastavitvami sistema. Razmislite o uporabi zvočnega strežnika."
+msgstr "Zvočni izhod uporablja drug program. Ustavite program, ki zaseda izhod, ali pa izberite nov izhod v izbirniku predstavnih sistemov. Razmislite o uporabi zvočnega strežnika."
 
 #: ../libcesarplayer/src/bacon-video-widget-gst-0.10.c:2617
 #: ../libcesarplayer/src/bacon-video-widget-gst-0.10.c:2623
-#, fuzzy, c-format
+#, c-format
 msgid "The playback of this movie requires a %s plugin which is not installed."
-msgstr ""
-"Predvajanje tega posnetka zahteva uporabo navedenih dekodirnikov, ki pa niso nameščeni:\n"
-"\n"
-"%s"
+msgstr "Predvajanje tega posnetka zahteva uporabo vstavka %s, ki pa ni nameščen."
 
 #: ../libcesarplayer/src/bacon-video-widget-gst-0.10.c:2625
 #, c-format
@@ -2704,19 +2699,19 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
+"Za predvajanje tega filma potrebujete naslednje dekodirnike, ki niso nameščeni:\n"
+"\n"
+"%s"
 
 #: ../libcesarplayer/src/bacon-video-widget-gst-0.10.c:2651
-#, fuzzy
 msgid "Cannot play this file over the network. Try downloading it to disk first."
-msgstr "Ni mogoče predvajanje preko omrežja. Poskusite prenesti datoteko na disk."
+msgstr "Te datoteke ni mogoče predvajati prek omrežja. Poskusite jo najprej prenesti na disk."
 
 #: ../libcesarplayer/src/bacon-video-widget-gst-0.10.c:2726
-#, fuzzy
 msgid "Media file could not be played."
 msgstr "Predstavne datoteke ni mogoče predvajati."
 
 #: ../libcesarplayer/src/bacon-video-widget-gst-0.10.c:2868
-#, fuzzy
 msgid "Failed to retrieve working directory"
 msgstr "Pridobivanje delovne mape je spodletelo."
 
@@ -2741,30 +2736,30 @@ msgid "Media contains no supported video streams."
 msgstr "Posnetek ne vsebuje podprtih pretokov slike."
 
 #: ../libcesarplayer/src/bacon-video-widget-gst-0.10.c:5394
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to create a GStreamer play object. Please check your GStreamer installation."
-msgstr "Napaka med ustvarjanjem GStreamer predmeta predvajanja. Preverite nastavitve."
+msgstr "Napaka med ustvarjanjem predmeta predvajanja GStreamer. Preverite namestitev programa GStreamer."
 
 #: ../libcesarplayer/src/bacon-video-widget-gst-0.10.c:5468
 #: ../libcesarplayer/src/bacon-video-widget-gst-0.10.c:5595
 #, c-format
 msgid "Failed to open video output. It may not be available. Please select another video output in the Multimedia Systems Selector."
-msgstr ""
+msgstr "Slikovnega izhoda ni mogoče odpreti. Morda ni na voljo. Izbrati je treba drug slikovni izhod v izbirniku predstavnih sistemov."
 
 #: ../libcesarplayer/src/bacon-video-widget-gst-0.10.c:5480
-#, fuzzy, c-format
+#, c-format
 msgid "Could not find the video output. You may need to install additional GStreamer plugins, or select another video output in the Multimedia Systems Selector."
-msgstr "Ni mogoče najti odvoda zvoka. Naložiti je treba dodatne GStreamer vstavke ali pa je treba izbrati drug odvod slike med sistemskimi nastavitvami."
+msgstr "Slikovnega izhoda ni mogoče najti. Morda je treba namestiti dodatne vstavke GStreamer ali pa izbrati drug slikovni izhod v izbirniku predstavnih sistemov."
 
 #: ../libcesarplayer/src/bacon-video-widget-gst-0.10.c:5516
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to open audio output. You may not have permission to open the sound device, or the sound server may not be running. Please select another audio output in the Multimedia Systems Selector."
-msgstr "Napaka med odpiranjem zvočnega odvoda. Morda ni ustreznih sistemskih dovoljenj za odpiranje zvočne naprave ali pa zvočni strežnik ne deluje. Izberite drug zvočni odvod v sistemskih nastavitvah."
+msgstr "Napaka med odpiranjem zvočnega izhoda. Morda ni ustreznih dovoljenj za odpiranje zvočne naprave ali pa zvočni strežnik ni zagnan. Izberite drug zvočni izhod v izbirniku predstavnih sistemov."
 
 #: ../libcesarplayer/src/bacon-video-widget-gst-0.10.c:5536
-#, fuzzy, c-format
+#, c-format
 msgid "Could not find the audio output. You may need to install additional GStreamer plugins, or select another audio output in the Multimedia Systems Selector."
-msgstr "Ni mogoče najti odvoda zvoka. Naložiti je treba dodatne GStreamer vstavke ali pa je treba izbrati drug odvod slike med sistemskimi nastavitvami."
+msgstr "Zvočnega izhoda ni mogoče najti. Morda je treba namestiti dodatne vstavke GStreamer ali pa izbrati drug zvočni izhod v izbirniku predstavnih sistemov."
 
 #. hour:minutes:seconds
 #. Translators: This is a time format, like "9:05:02" for 9
@@ -7157,141 +7152,3 @@ msgstr "Razlika"
 msgid "Runner"
 msgstr "Tekač"
 
-#~ msgid "EXPERIMENTAL, Chronojump may crash."
-#~ msgstr "PREIZKUSNO, program Chronojump se lahko sesuje."
-
-#~ msgid ""
-#~ "If you just connected Chronopic, refresh this window pressing 'Refresh'."
-#~ msgstr ""
-#~ "V kolikor ste ravnokar povezali kronopik z računalnikom, pritisnite tipko "
-#~ "za 'osvežitev'."
-
-#~ msgid "More information on <b>Chronojump Manual</b> at section:"
-#~ msgstr "Več podrobnosti o <b>Priročniku ChronoJump</b> je na odseku:"
-
-#~ msgid "Jumps: Simple"
-#~ msgstr "Skoki: enostavni skok"
-
-#~ msgid "<b>Graph</b>"
-#~ msgstr "<b>Graf</b>"
-
-#~ msgid "Chronojump Statistics window"
-#~ msgstr "Okno statistike ChronoJump"
-
-#~ msgid "Custom pulse"
-#~ msgstr "Ritem po meri"
-
-#~ msgid "Description:"
-#~ msgstr "Opis:"
-
-#~ msgid "Extra data for this pulse"
-#~ msgstr "Dodatni podatki za ta ritem"
-
-#~ msgid "Free pulse"
-#~ msgstr "Prosti ritem"
-
-#~ msgid "Goto server website"
-#~ msgstr "Pojdi na spletišče strežnika"
-
-#~ msgid "Line"
-#~ msgstr "Črta"
-
-#~ msgid "Multi Chronopic start"
-#~ msgstr "Zagon multikronopika"
-
-#~ msgid "Options"
-#~ msgstr "Možnosti"
-
-#~ msgid "Query"
-#~ msgstr "Poizvedba"
-
-#~ msgid "Report"
-#~ msgstr "Poročilo"
-
-#~ msgid "S_tats"
-#~ msgstr "_Statistika"
-
-#~ msgid "Show/Hide margins"
-#~ msgstr "Pokaži/Skrij robove"
-
-#~ msgid "Sync"
-#~ msgstr "Uskladi"
-
-#~ msgid "T"
-#~ msgstr "č"
-
-#~ msgid "_Other tests"
-#~ msgstr "_Preostali testi"
-
-#~ msgid "_Server"
-#~ msgstr "_Strežnik"
-
-#~ msgid "_Tools"
-#~ msgstr "_Orodja"
-
-#~ msgid "always"
-#~ msgstr "vedno"
-
-#~ msgid "define desired pulse step"
-#~ msgstr "določitev želenega tempa ritma"
-
-#~ msgid "run extra data"
-#~ msgstr "dodatni podatki teka"
-
-#~ msgid "start managing pulses freely"
-#~ msgstr "začnite prosto upravljati z ritmi"
-
-#~ msgid "AVG TF"
-#~ msgstr "Srednji čL"
-
-#~ msgid "AVG TC"
-#~ msgstr "Srednji čS"
-
-#~ msgid "speed"
-#~ msgstr "hitrost"
-
-#~ msgid "AVG Speed"
-#~ msgstr "Srednja hitrost"
-
-#~ msgid "Ready."
-#~ msgstr "Pripravljeno."
-
-#~ msgid "Successfully added"
-#~ msgstr "Uspešno dodano"
-
-#~ msgid "Deleted jump"
-#~ msgstr "Skok je izbrisan."
-
-#~ msgid "Deleted reactive jump"
-#~ msgstr "Repetitivno-eksplozivni skok je izbrisan."
-
-#~ msgid "Deleted selected run"
-#~ msgstr "Izbran tek je izbrisan."
-
-#~ msgid "Deleted intervallic run"
-#~ msgstr "Intervalni tek je izbrisan."
-
-#~ msgid "Deleted reaction time"
-#~ msgstr "Odzivni čas je izbrisan."
-
-#~ msgid "Deleted pulse"
-#~ msgstr "Ritem je izbrisan"
-
-#~ msgid "Deleted multi chronopic"
-#~ msgstr "Izbrisan je multikronopik"
-
-#~ msgid ""
-#~ "\n"
-#~ "This jump type is fixed to {0} seconds, totaltime cannot be greater."
-#~ msgstr ""
-#~ "\n"
-#~ "Ta vrsta skoka je omejena na čas {0} sekund in skupnega časa ni mogoče "
-#~ "podaljšati."
-
-#~ msgid ""
-#~ "\n"
-#~ "This run type is fixed to {0} seconds, totaltime cannot be greater."
-#~ msgstr ""
-#~ "\n"
-#~ "Ta vrsta teka je omejena na {0} sekund, zato ni mogoče določiti daljšega "
-#~ "časa."
