--- a/manual/chronojump_manual_es.lyx
+++ b/manual/chronojump_manual_es.lyx
@@ -8136,7 +8136,7 @@ Además, tampoco subirán al servidor los comentarios que el evaluador haya
 \end_layout
 
 \begin_layout Chapter
-Preferencias
+Preferencias y uso de Chronojump en más de un ordenador
 \begin_inset CommandInset label
 LatexCommand label
 name "sec:Preferencias"
@@ -8149,68 +8149,172 @@ name "sec:Preferencias"
 \begin_layout Standard
 La ventana de preferencias 
 \emph on
-Herramientas / Preferencias
+Sesión / Preferencias
 \emph default
-, se divide en tres pestañas:
-\end_layout
-
-\begin_layout Description
-Base
-\begin_inset space ~
-\end_inset
-
-de
-\begin_inset space ~
-\end_inset
-
-datos (figura 
+, se divide en tres pestañas: 
+\emph on
+Base de datos
+\emph default
+, 
+\emph on
+Mostrar
+\emph default
+ y 
+\emph on
+Otros
+\emph default
+.
+ La figura 
 \begin_inset CommandInset ref
 LatexCommand ref
-reference "fig:Preferencias1"
+reference "fig:Preferencias"
 
 \end_inset
 
-) Muestra donde se encuentra, permite abrir la carpeta, y también permite
+ muestra las tres pestañas.
+\end_layout
+
+\begin_layout Standard
+La pestaña 
+\emph on
+Base de datos
+\emph default
+ muestra donde se encuentra, permite abrir la carpeta, y también permite
  realizar una copia de la misma en algún directorio de elección del usuario.
- Se muestran dos posibles ubicaciones de la base de datos pues algunos sistemas
- operativos ofrecen un lugar donde guardar los datos mientras el programa
- se ejecuta, y otro cuando éste se ha cerrado.
+ Es posible que se muestren dos ubicaciones de la base de datos pues algunas
+ versiones de Windows ofrecen un lugar donde guardar los datos mientras
+ el programa se ejecuta, y otro cuando éste se ha cerrado.
  
 \end_layout
 
-\begin_layout Description
-Mostrar (figura 
-\begin_inset CommandInset ref
-LatexCommand ref
-reference "fig:Preferencias2"
-
-\end_inset
-
-) Opciones sobre qué columnas de información se desea mostrar en las ventanas
- de datos y la ventana de estadísticas.
+\begin_layout Standard
+A parte de permitir la copia de la base de datos para no perder información
+ ante un problema de hardware o una reinstalación del sistema operativo,
+ la pestaña de base de datos también se usa para facilitar el trabajo en
+ más de un ordenador.
 \end_layout
 
-\begin_layout Description
-Otros (figura 
-\begin_inset CommandInset ref
-LatexCommand ref
-reference "fig:Preferencias3"
+\begin_layout Standard
+Hasta la fecha, Chronojump no dispone de un sistema de sincronización de
+ los datos entre varias instalaciones de Chronojump en distintos ordenadores.
+ En enero de 2012 se prevé publicar un método para unir dos bases de datos
+ distintas.
+ De momento, la única manera que existe para trabajar en varios sistemas
+ es copiar la base de datos de un lado a otro.
+ Como ejemplo, si desea copiar la base de datos desde el ordenador A al
+ B, haga lo siguiente:
+\end_layout
 
+\begin_layout Enumerate
+En el ordenador A:
+\end_layout
+
+\begin_deeper
+\begin_layout Enumerate
+Ir a 
+\emph on
+Sesión / preferencias / base de datos / copiar base de datos
+\end_layout
+
+\begin_layout Enumerate
+Seleccionar la carpeta en la que desee copiarla.
+ Por ejemplo: un lápiz USB (pendrive).
+ El archivo se denominará 
+\emph on
+chronojump.db
+\end_layout
+
+\end_deeper
+\begin_layout Enumerate
+En el ordenador B :
+\end_layout
+
+\begin_deeper
+\begin_layout Enumerate
+Si Chronojump no está instalado, deberá instalarlo.
+\end_layout
+
+\begin_layout Enumerate
+Ir a 
+\emph on
+Sesión / preferencias / base de datos / abrir la carpeta de la base de datos
+\emph default
+.
+\end_layout
+
+\begin_layout Enumerate
+Si en la base de datos del ordenador B tiene datos que no quiere perder,
+ entonces realice una copia del archivo 
+\emph on
+chronojump.db
+\emph default
+ que se encuentra en dicha carpeta.
+\end_layout
+
+\begin_layout Enumerate
+Copie el archivo 
+\emph on
+chronojump.db
+\emph default
+ del ordenador A a la carpeta de la base de datos del ordenador B.
+\end_layout
+
+\begin_layout Enumerate
+Reinicie Chronojump en el ordenador B.
+\end_layout
+
+\end_deeper
+\begin_layout Standard
+\begin_inset Newpage pagebreak
 \end_inset
 
-) Las dos primeras opciones se refieren al número de decimales (recomendado
- 3), y al borrado de tests.
+
+\end_layout
+
+\begin_layout Standard
+La pestaña 
+\emph on
+Mostrar
+\emph default
+ permite establecer las columnas de información que se desea mostrar en
+ las ventanas de datos y la ventana de estadísticas.
+\end_layout
+
+\begin_layout Standard
+La pestañá 
+\emph on
+Otros
+\emph default
+ tiene tres opciones.
+ La primera se refiere al número de decimales a mostrar (recomendado 3).
+ Si la segunda opción esta activa, se mostraráuna ventana de confirmación
+ cuando el usuario desee borrar un test.
  La última acción es específica de los saltos reactivos limitados por tiempo.
- Si usted usa dichos tests, seleccione aquí cuál es el comportamiento que
- usted prefiere en el caso de que un sujeto se encuentre en el aire en el
- momento en que se termine el tiempo definido.
+ Si la opción está activada, en un salto reactivo limitado por tiempo en
+ que el saltador se encuentre en el aire en el momento de finalizar el test,
+ se aceptará el último salto.
+ Por otro lado, dicho último salto será descartado si la opción se encuentra
+ desactivada.
 \end_layout
 
 \begin_layout Standard
 \begin_inset Float figure
+placement H
 wide false
 sideways false
 status open
+
+\begin_layout Plain Layout
+\noindent
+\align center
+\begin_inset Tabular
+<lyxtabular version="3" rows="2" columns="2">
+<features>
+<column alignment="center" valignment="top" width="6cm">
+<column alignment="center" valignment="top" width="6cm">
+<row>
+<cell alignment="center" valignment="top" usebox="none">
+\begin_inset Text
 
 \begin_layout Plain Layout
 \align center
@@ -8223,34 +8327,10 @@ status open
 
 \end_layout
 
-\begin_layout Plain Layout
-\begin_inset Caption
-
-\begin_layout Plain Layout
-\begin_inset CommandInset label
-LatexCommand label
-name "fig:Preferencias1"
-
 \end_inset
-
-Ventana de preferencias - pestaña 1.
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-\begin_inset Float figure
-wide false
-sideways false
-status open
+</cell>
+<cell alignment="center" valignment="top" usebox="none">
+\begin_inset Text
 
 \begin_layout Plain Layout
 \align center
@@ -8263,34 +8343,12 @@ status open
 
 \end_layout
 
-\begin_layout Plain Layout
-\begin_inset Caption
-
-\begin_layout Plain Layout
-\begin_inset CommandInset label
-LatexCommand label
-name "fig:Preferencias2"
-
 \end_inset
-
-Ventana de preferencias - pestaña 2.
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-\begin_inset Float figure
-wide false
-sideways false
-status open
+</cell>
+</row>
+<row topspace="0.5cm">
+<cell multicolumn="1" alignment="center" valignment="top" usebox="none" width="12cm">
+\begin_inset Text
 
 \begin_layout Plain Layout
 \align center
@@ -8303,21 +8361,44 @@ status open
 
 \end_layout
 
+\end_inset
+</cell>
+<cell multicolumn="2" alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+</cell>
+</row>
+</lyxtabular>
+
+\end_inset
+
+
+\end_layout
+
 \begin_layout Plain Layout
 \begin_inset Caption
 
 \begin_layout Plain Layout
 \begin_inset CommandInset label
 LatexCommand label
-name "fig:Preferencias3"
+name "fig:Preferencias"
 
 \end_inset
 
-Ventana de preferencias - pestaña 3.
+Pestañas de la ventana de preferencias.
 \end_layout
 
 \end_inset
 
+
+\end_layout
+
+\begin_layout Plain Layout
 
 \end_layout
 
