--- a/po/sl.po
+++ b/po/sl.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: chronojump master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=chronojump&keywords=I18N+L10N&component=general\n"
 "POT-Creation-Date: 2012-03-30 04:54+0000\n"
-"PO-Revision-Date: 2012-03-30 15:37+0100\n"
+"PO-Revision-Date: 2012-03-31 11:08+0100\n"
 "Last-Translator: Matej Urbančič <mateju@svn.gnome.org>\n"
 "Language-Team: Slovenian GNOME Translation Team <gnome-si@googlegroups.com>\n"
 "Language: \n"
@@ -2654,9 +2654,8 @@ msgid "<b>Options</b>"
 msgstr "<b>Možnosti</b>"
 
 #: ../glade/chronojump.glade.h:555
-#, fuzzy
 msgid "Capture from encoder"
-msgstr "Napake opravila zajemanja"
+msgstr "Zajemi preko kodirnika"
 
 #: ../glade/chronojump.glade.h:556
 msgid "Recalculate"
@@ -2687,7 +2686,7 @@ msgstr "Namen"
 #: ../glade/chronojump.glade.h:562
 #, fuzzy
 msgid "Curve number"
-msgstr "Število sider"
+msgstr "Serijska številka"
 
 #: ../glade/chronojump.glade.h:563
 msgid "Analyze"
