--- a/po/es.po
+++ b/po/es.po
@@ -13,8 +13,8 @@ msgstr ""
 "Project-Id-Version: chronojump.master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=chronojump&keywords=I18N+L10N&component=general\n"
-"POT-Creation-Date: 2012-04-10 21:21+0000\n"
-"PO-Revision-Date: 2012-04-12 14:39+0200\n"
+"POT-Creation-Date: 2012-04-13 08:17+0000\n"
+"PO-Revision-Date: 2012-04-13 17:29+0200\n"
 "Last-Translator: Daniel Mustieles <daniel.mustieles@gmail.com>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -142,15 +142,16 @@ msgid "Comments"
 msgstr "Comentarios"
 
 #: ../glade/chronojump.glade.h:19 ../src/exportSession.cs:234
-#: ../src/exportSession.cs:282 ../src/stats/djIndex.cs:33
-#: ../src/stats/djQ.cs:33 ../src/stats/graphs/djIndex.cs:70
-#: ../src/stats/graphs/djIndex.cs:86 ../src/stats/graphs/djQ.cs:70
-#: ../src/stats/graphs/djQ.cs:86 ../src/stats/graphs/fv.cs:83
-#: ../src/stats/graphs/fv.cs:84 ../src/stats/graphs/global.cs:68
-#: ../src/stats/graphs/global.cs:77 ../src/stats/graphs/global.cs:88
-#: ../src/stats/graphs/potency.cs:74 ../src/stats/graphs/potency.cs:85
-#: ../src/stats/graphs/sjCmjAbk.cs:65 ../src/stats/graphs/sjCmjAbk.cs:71
-#: ../src/stats/graphs/sjCmjAbk.cs:78 ../src/stats/graphs/sjCmjAbkPlus.cs:73
+#: ../src/exportSession.cs:282 ../src/gui/encoder.cs:327
+#: ../src/stats/djIndex.cs:33 ../src/stats/djQ.cs:33
+#: ../src/stats/graphs/djIndex.cs:70 ../src/stats/graphs/djIndex.cs:86
+#: ../src/stats/graphs/djQ.cs:70 ../src/stats/graphs/djQ.cs:86
+#: ../src/stats/graphs/fv.cs:83 ../src/stats/graphs/fv.cs:84
+#: ../src/stats/graphs/global.cs:68 ../src/stats/graphs/global.cs:77
+#: ../src/stats/graphs/global.cs:88 ../src/stats/graphs/potency.cs:74
+#: ../src/stats/graphs/potency.cs:85 ../src/stats/graphs/sjCmjAbk.cs:65
+#: ../src/stats/graphs/sjCmjAbk.cs:71 ../src/stats/graphs/sjCmjAbk.cs:78
+#: ../src/stats/graphs/sjCmjAbkPlus.cs:73
 #: ../src/stats/graphs/sjCmjAbkPlus.cs:82
 #: ../src/stats/graphs/sjCmjAbkPlus.cs:90 ../src/stats/potency.cs:63
 #: ../src/stats/sjCmjAbk.cs:53 ../src/stats/sjCmjAbkPlus.cs:63
@@ -4277,7 +4278,7 @@ msgstr "Problemas comunicando con chronopic,"
 
 #: ../src/gui/chronopic.cs:522
 msgid "Changed platform to 'Simulated'"
-msgstr "Plataforma cambiada a 'modo simulado'"
+msgstr "Plataforma cambiada a «modo simulado»"
 
 #: ../src/gui/chronopic.cs:523
 msgid ""
@@ -4327,15 +4328,58 @@ msgstr ""
 "Nuevo peso\n"
 "opción 2"
 
-#: ../src/gui/encoder.cs:213
-#| msgid "Short description"
+#: ../src/gui/encoder.cs:162
+msgid "Missing data."
+msgstr "Faltan datos."
+
+#: ../src/gui/encoder.cs:210
 msgid "Add an optional description"
 msgstr "Añadir una descripción opcional"
 
-#: ../src/gui/encoder.cs:215
-#| msgid "State"
+#: ../src/gui/encoder.cs:212
 msgid "Save"
 msgstr "Guardar"
+
+#: ../src/gui/encoder.cs:240
+#| msgid "Save"
+msgid "Saved."
+msgstr "Guardado"
+
+#: ../src/gui/encoder.cs:326
+#| msgid "subtraction"
+msgid "Duration"
+msgstr "Duración"
+
+#: ../src/gui/encoder.cs:328
+#| msgid "Speed"
+msgid "MeanSpeed"
+msgstr "Velocidad media"
+
+#: ../src/gui/encoder.cs:329
+#| msgid "Speed"
+msgid "MaxSpeed"
+msgstr "Velocidad máxima"
+
+#. duration (s): width
+#: ../src/gui/encoder.cs:330
+#| msgid "Peak Power"
+msgid "MeanPower"
+msgstr "Potencia media"
+
+#: ../src/gui/encoder.cs:331
+#| msgid "Peak Power"
+msgid "PeakPower"
+msgstr "Pico de potencia"
+
+#: ../src/gui/encoder.cs:332
+#| msgid "Peak Power"
+msgid "PeakPowerTime"
+msgstr "Duración del pico de potencia"
+
+#: ../src/gui/encoder.cs:546 ../src/gui/encoder.cs:555
+#| msgid "Please, define it"
+msgid "Please, wait."
+msgstr "Espere."
 
 #: ../src/gui/evaluator.cs:345
 msgid "Select of Birth"
