--- a/po/sl.po
+++ b/po/sl.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: chronojump master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=chronojump&keywords=I18N+L10N&component=general\n"
 "POT-Creation-Date: 2012-05-26 19:47+0000\n"
-"PO-Revision-Date: 2012-05-28 14:50+0100\n"
+"PO-Revision-Date: 2012-05-28 19:20+0100\n"
 "Last-Translator: Matej Urbančič <mateju@svn.gnome.org>\n"
 "Language-Team: Slovenian GNOME Translation Team <gnome-si@googlegroups.com>\n"
 "Language: \n"
@@ -2752,7 +2752,7 @@ msgstr "Superpozicija"
 
 #: ../glade/chronojump.glade.h:581
 msgid "Ecc-conc phases"
-msgstr ""
+msgstr "Ekc.-Konc. faze"
 
 #: ../glade/chronojump.glade.h:582
 msgid "Together"
