--- a/po/sl.po
+++ b/po/sl.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: chronojump master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=chronojump&keywords=I18N+L10N&component=general\n"
 "POT-Creation-Date: 2012-06-08 17:33+0000\n"
-"PO-Revision-Date: 2012-06-08 21:09+0100\n"
+"PO-Revision-Date: 2012-06-17 21:12+0100\n"
 "Last-Translator: Matej Urbančič <mateju@svn.gnome.org>\n"
 "Language-Team: Slovenian GNOME Translation Team <gnome-si@googlegroups.com>\n"
 "Language: \n"
@@ -4708,22 +4708,19 @@ msgid "Power / Speed"
 msgstr "Moč / hitrost"
 
 #: ../src/gui/encoder.cs:903
-#, fuzzy
 msgid "Encoder exercise name:"
 msgstr "Ime vaje kodirnika:"
 
 #: ../src/gui/encoder.cs:904
 #: ../src/gui/encoder.cs:936
-#, fuzzy
 msgid "Displaced body weight"
-msgstr "Teža razmeščenega telesa"
+msgstr "Izpodrinjena teža telesa"
 
 #. done this because IsEditable does not affect the cursors
 #: ../src/gui/encoder.cs:906
 #: ../src/gui/encoder.cs:938
-#, fuzzy
 msgid "Ressitance"
-msgstr "Upor"
+msgstr "Odpor"
 
 #: ../src/gui/encoder.cs:935
 msgid "Write the name of the encoder exercise:"
@@ -7565,3 +7562,4 @@ msgstr "Razlika"
 #: ../src/treeViewRun.cs:125
 msgid "Runner"
 msgstr "Tekač"
+
