--- a/po/ca.po
+++ b/po/ca.po
@@ -2112,7 +2112,7 @@ msgstr "Infrarojos"
 
 #: ../glade/chronojump.glade.h:453
 msgid "To buy or build these devices see website:"
-msgstr "Per a comprar o fabricar aquestos dispositius, visiteu el lloc web:"
+msgstr "Per a comprar o fabricar aquests dispositius, visiteu el lloc web:"
 
 #: ../glade/chronojump.glade.h:454
 msgid "Device"
@@ -3190,7 +3190,7 @@ msgid ""
 "If you have no data on your database (you just installed Chronojump), you "
 "can fix this problem deleting this file: {0}"
 msgstr ""
-"Si no te dades a la base de dades (acaba d'instal·lar el programa), pot "
+"Si no té dades a la base de dades (acaba d'instal·lar el programa), pot "
 "arreglar aquest problema esborrant l'arxiu: {0}"
 
 #: ../src/chronojump.cs:244
@@ -3299,7 +3299,7 @@ msgstr "No es pot copiar {0} arxius des de {1} a {2}"
 #: ../src/chronojump.cs:771
 #, csharp-format
 msgid "Cannot move {0} files from {1} to {2}"
-msgstr "No es podeu moure {0} arxius des de {1} fins a {2}"
+msgstr "No es poden moure {0} arxius des de {1} fins a {2}"
 
 #: ../src/chronojump.cs:772
 msgid "Please, do it manually"
@@ -3330,7 +3330,7 @@ msgstr ""
 
 #: ../src/chronojump_mini.cs:141
 msgid "Error opening serial port"
-msgstr "Error en obrir el port serie"
+msgstr "Error en obrir el port sèrie"
 
 #. -- Si hay error terminar
 #: ../src/chronojump_mini.cs:160
@@ -3574,20 +3574,19 @@ msgstr "negre"
 
 #: ../src/constants.cs:398
 msgid "Typical serial and USB-serial ports on Windows:"
-msgstr "Típics ports de serie i USB a Windows:"
+msgstr "Típics ports sèrie i USB a Windows:"
 
 #: ../src/constants.cs:400
 msgid "Also, these are possible:"
 msgstr "A més, això és possible:"
 
 #: ../src/constants.cs:404
-#, fuzzy
 msgid "Typical serial ports on GNU/Linux:"
-msgstr "Ports serie USB típics a GNU/Linux:"
+msgstr "Ports sèrie USB típics a GNU/Linux:"
 
 #: ../src/constants.cs:406
 msgid "Typical USB-serial ports on GNU/Linux:"
-msgstr "Ports serie USB típics a GNU/Linux:"
+msgstr "Ports sèrie USB típics a GNU/Linux:"
 
 #: ../src/constants.cs:408
 msgid "If you use Chronopic3, you will have an USB-serial port."
