--- a/po/sl.po
+++ b/po/sl.po
@@ -12,7 +12,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=chronojump&keywords=I18N+L10N&component=general\n"
 "POT-Creation-Date: 2013-09-05 21:29+0000\n"
-"PO-Revision-Date: 2013-09-12 19:54+0100\n"
+"PO-Revision-Date: 2013-09-12 20:23+0100\n"
 "Last-Translator: Matej Urbančič <mateju@svn.gnome.org>\n"
 "Language-Team: Slovenian GNOME Translation Team <gnome-si@googlegroups.com>\n"
 "Language: sl_SI\n"
@@ -4970,7 +4970,7 @@ msgstr "Gradnika ni mogoče najti: %s"
 #: ../src/gui/encoder.cs:2500
 #, csharp-format
 msgid "Displaced body weight in this exercise: {0}%."
-msgstr "Izpodrinjena teža telesa v tej vaji: "
+msgstr "Izpodrinjena teža telesa v tej vaji: {0}%."
 
 #: ../src/gui/encoder.cs:2502
 #, csharp-format
